[gd_scene load_steps=6 format=2]

[ext_resource path="res://Internal/Default/Themes/HeaderText.tres" type="Theme" id=1]
[ext_resource path="res://Internal/Default/Fonts/RobotoMono/static/RobotoMono-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://App/Extensions/SWAP_Extension/Scripts/HintToConsole.gd" type="Script" id=3]
[ext_resource path="res://App/Extensions/SWAP_Extension/Scripts/UI/Nodes/ReplacementNode.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 2 )

[node name="ReplacementNode" type="PanelContainer"]
self_modulate = Color( 0.67451, 0.67451, 0.67451, 1 )
margin_right = 388.0
margin_bottom = 184.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 381.0
margin_bottom = 205.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 374.0
margin_bottom = 198.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SourceLabels" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/SourceLabels"]
margin_top = 2.0
margin_right = 310.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "ID Source:"

[node name="Help" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/SourceLabels"]
margin_left = 314.0
margin_right = 350.0
margin_bottom = 22.0
rect_min_size = Vector2( 36, 0 )
hint_tooltip = "..."
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "?"
align = 1
script = ExtResource( 3 )

[node name="SourceSelect" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 350.0
margin_bottom = 46.0
text = "Editor ID"
items = [ "Editor ID", null, false, 0, null, "esp / esm", null, false, 1, null, "esl", null, false, 2, null ]
selected = 0

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 350.0
margin_bottom = 50.0

[node name="IdLabels" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 350.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/IdLabels"]
margin_top = 2.0
margin_right = 310.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Form / Editor ID:"

[node name="Help" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/IdLabels"]
margin_left = 314.0
margin_right = 350.0
margin_bottom = 22.0
rect_min_size = Vector2( 36, 0 )
hint_tooltip = "..."
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "?"
align = 1
script = ExtResource( 3 )

[node name="CleanCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 350.0
margin_bottom = 104.0
text = "Auto Clean"

[node name="IdEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 350.0
margin_bottom = 134.0
clear_button_enabled = true
placeholder_text = "e.g. FE051801"

[node name="Spacer2" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 350.0
margin_bottom = 138.0

[node name="SourceContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 350.0
margin_bottom = 198.0

[node name="IdLabels" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/SourceContainer"]
margin_right = 350.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/SourceContainer/IdLabels"]
margin_top = 2.0
margin_right = 310.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Source Plugin:"

[node name="Help" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/SourceContainer/IdLabels"]
margin_left = 314.0
margin_right = 350.0
margin_bottom = 22.0
rect_min_size = Vector2( 36, 0 )
hint_tooltip = "..."
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "?"
align = 1
script = ExtResource( 3 )

[node name="SourceEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer/SourceContainer"]
margin_top = 26.0
margin_right = 350.0
margin_bottom = 52.0
clear_button_enabled = true
placeholder_text = "e.g. MyMod.esp"

[node name="Spacer4" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer/SourceContainer"]
margin_top = 56.0
margin_right = 350.0
margin_bottom = 56.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 354.0
margin_right = 374.0
margin_bottom = 198.0

[node name="DeleteButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 20.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "X"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/DeleteButton" to="." method="_on_DeleteButton_pressed"]
